#
# WARNING
# ^^^^^^^
# This configuration file is for development only and should NOT be used be
# used in production. For example configuration, see the Presto documentation.
#

# Required for Java 17 runtime
#--add-opens=java.base/java.lang=ALL-UNNAMED
#--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
